Fixed issues related to Settings menu not showing

--- a/src/boa/plugins/gui.ajax/res/themes/umbra/css/app.css
+++ b/src/boa/plugins/gui.ajax/res/themes/umbra/css/app.css
@@ -191,7 +191,7 @@ textarea{
 div.detailed > div.thumbnail_selectable_cell {
     width: 48%;
     text-align: left;
-    height: 55px;
+    height: 65px;
     overflow: hidden;
 }
 
